--- a/charts/pihole/values.yaml
+++ b/charts/pihole/values.yaml
@@ -16,7 +16,7 @@ maxUnavailable: 1
 
 image:
   # -- the repostory to pull the image from
-  repository: "pihole/pihole"
+  repository: "cbcrowe/pihole-unbound:latest"
   # -- the docker tag, if left empty it will get it from the chart's appVersion
   tag: ""
   # -- the pull policy
