Replace google with unbound

--- a/charts/pihole/values.yaml
+++ b/charts/pihole/values.yaml
@@ -251,9 +251,9 @@ extraEnvVarsSecret: {}
   #   key: secret-key
 
 # -- default upstream DNS 1 server to use
-DNS1: "8.8.8.8"
+DNS1: "127.0.0.1#5335"
 # -- default upstream DNS 2 server to use
-DNS2: "8.8.4.4"
+#DNS2: ""
 
 antiaff:
   # -- set to true to enable antiaffinity (example: 2 pihole DNS in the same cluster)
