--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-name: Pi-Hole Helm Chart
-description: Pi-Hole Helm Repository
+name: Pi-Hole Unbound Helm Chart
+description: Pi-Hole Unbound Helm Repository
