--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.3.0
         with:
-          charts_repo_url: https://mojo2600.github.io/pihole-kubernetes/
+          charts_repo_url: https://KFDCompiled.github.io/kubernetes-pihole-unbound/
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
