--- a/charts/pihole/Chart.yaml
+++ b/charts/pihole/Chart.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 description: Installs pihole in kubernetes
-home: https://github.com/MoJo2600/pihole-kubernetes/tree/master/charts/pihole
+home: https://github.com/KFDCompiled/kubernetes-pihole-unbound/tree/master/charts/pihole
 name: pihole
 appVersion: "2023.01"
-version: 2.12.0
+version: 0.0.1
 sources:
-  - https://github.com/MoJo2600/pihole-kubernetes/tree/master/charts/pihole
+  - https://github.com/KFDCompiled/kubernetes-pihole-unbound/tree/master/charts/pihole
   - https://pi-hole.net/
   - https://github.com/pi-hole
   - https://github.com/pi-hole/docker-pi-hole
 icon: https://i2.wp.com/pi-hole.net/wp-content/uploads/2016/12/Vortex-R.png
 maintainers:
-  - name: MoJo2600
-    email: christian.erhardt@mojo2k.de
+  - name: KFDCompiled
+    email: kfd@kfdcompiled.dev
